force-app/main/default/objects/Bank_Account__c/fields/Bank_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Holder_Name__c</fullName>
    <label>Bank Holder Name</label>
    <length>70</length>
    <type>Text</type>
</CustomField>