force-app/main/default/objects/Bank_Account__c/fields/Bank_MICR_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_MICR_Code__c</fullName>
    <label>Bank MICR Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>