force-app/main/default/objects/Bank_Account__c/fields/Bank_Swift_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_Swift_Code__c</fullName>
    <label>Bank Swift Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>