force-app/main/default/objects/Bank_Account__c/listViews/Bank_Details.listView-meta.xml
<ListView>
    <fullName>Bank_Details</fullName>
    <columns>NAME</columns>
    <columns>Bank_Account_Number__c</columns>
    <columns>Bank_Holder_Name__c</columns>
    <columns>Bank_IFSC_Code__c</columns>
    <columns>Bank_MICR_Code__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>Bank_Swift_Code__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>Bank Details</label>
</ListView>